# news_agent

./: .gitignore  =0.20.0  HOW_TO_RUN.md  LICENSE  Makefile  QUICK_START.md  README.md  app.py  extracted_claims.json  pyproject.toml  requirements.txt
TRUST_agents/: orchestrator.py  orchestrator_research.py
TRUST_agents/agents/: claim_extractor.py  claim_extractor_tools.py  evidence_retrieval.py  explainer.py  explainer_tools.py  retrieval_agent_tools.py  verifier.py  verifier_tools.py
TRUST_agents/agents2.0/: decomposer_agent.py  delphi_jury.py
claim_extractor/: __init__.py  extractor.py
results/: baselines_liar.json  comparison_all.json
routers/: __init__.py  claims.py
schemas/: claims.py
scripts/: baseline_claim_extractor.py  baseline_llm.py  compare_all_metrics.py  compare_all_results.py  compare_metrics.py  download_fnn.py  download_liar.py  eval_claim_extractor.py  eval_hf.py  eval_llm.py  eval_trust_agents.py  evaluate_predictions.py  index_evidence.py  prepare_evidence_corpus.py  prepare_fnn.py  prepare_liar.py  run_trust_research.py  test_research_pipeline.py  train_hf.py
src/claim_extractor/: crew.py  main.py
src/claim_extractor/config/: agents.yaml  tasks.yaml
